fix: alignment header

--- a/src/app/Header/header.component.sass
+++ b/src/app/Header/header.component.sass
@@ -25,3 +25,8 @@ $small-screen: 768px
   .content
     flex-direction: column
 
+
+  .pokemon-header
+    justify-content: center
+    align-items: center
+
